# intus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  Makefile  README.md  debug_system_prompt.txt  log.json  monitor.sh  reproduce_issue
.github/workflows/: release.yml
homebrew/: intus.rb  tenere.rb
scripts/: release.sh
src/: app.rs  config.rs  context.rs  health.rs  lib.rs  logging.rs  main.rs  monologue.rs  ollama.rs  persistence.rs  process.rs  python.rs  rag.rs  theme.rs  tools.rs  ui.rs
src/tools/: code_intelligence.rs  filesystem.rs  mod.rs  python.rs  rag.rs  system.rs  web.rs
tests/: markdown_style_test.rs  markdown_test.rs  persistence_test.rs  python_tests.rs  python_tool_tests.rs  rag_integration_test.rs  rag_persistence_test.rs  read_url_test.rs  tool_integration_test.rs  web_search_test.rs
