[package]
name = "ollama-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
html2text = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bytes = "1.11.0"
tui-textarea = "0.7.0"
tui-markdown = "0.3.6"
throbber-widgets-tui = "0.8"
tokio-stream = "0.1"
toml = "0.9.10"
directories = "6.0.0"
sysinfo = "0.32"
arboard = "3.6.1"
ignore = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.23.0"
