[package]
name = "intus"
version = "1.0.3"
edition = "2021"
description = "A robust, privacy-first local AI assistant and system sidecar."
authors = ["Harry Weiss"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/harryw1/intus"
keywords = ["ollama", "tui", "ai", "agent", "local"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
html2text = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bytes = "1.11.0"
tui-textarea = "0.7.0"
tui-markdown = "0.3.6"
comrak = "0.35.0"
throbber-widgets-tui = "0.8"
tokio-stream = "0.1"
toml = "0.9.10"
directories = "6.0.0"
sysinfo = "0.32"
arboard = "3.6.1"
ignore = "0.4"
chrono = "0.4.42"
headless_chrome = "1.0.20"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.23.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size, use "3" for speed if preferred. "z" is good for TUIs.
